# openvector-bench

./: .gitignore  LICENSE-DATA  README.md  pyproject.toml
.github/workflows/: ci.yml
harness/distribution/: reconstruct_experiment.py
harness/generator/: codebook_probe.py  nrp_opt.py  (+5 more)
notebooks/: reproduce.ipynb
openvector_bench/: __init__.py  ec_generators.py  generator_search.py  generators.py  geometry.py  manifest.py  reconstruct.py  score_rc1.py
results/: CODEBOOK_PROBE.md  EC_FALSIFICATION.md  GEN_EXPLORE_ROUND0.md  GEN_EXPLORE_ROUND1.md  GEN_ROUND2_NRP.md  GEN_ROUND3_CONCENTRATION.md  GEN_ROUND4_STRATIFIED.md  GEN_ROUND5_HIER.md  GEN_ROUND6_COLOURED.md  GEN_ROUND7_QUERY.md  GEN_ROUND8_ANATOMY.md  HIER_COLOURED_PREDICTION.md  HIER_PREDICTION.md  HIER_QUERY_PREDICTION.md  PREREG_ROUND11.md  PREREG_ROUND12.md  QUERY_COUPLING_ARTIFACT.md  RC1_ROUND1.md  RC1_ROUND2_CANDIDATE.md  ROUND11_CALIBRATION.md  ROUND11_PREFREEZE.md  ROUND8_PREDICTION.md  ROUND9_PREDICTION.md  ROUND9_PROBES.md  ROUND9_RESULT.md  STEP1_TARGETS_V3.md  STRATIFIED_PREDICTION.md  WP5LITE_PREDICTION.md  WP5LITE_RESULT.md  codebook_probe.json  diag_target.json  ec_experiment.json  fit_v9_result.json  gen_round2_nrp.json  gen_round3_concentration.json  gen_round4_stratified.json  gen_round5_hier.json  gen_round6_coloured.json  gen_round7_query.json  gen_round8_anatomy.json  (+16 more)
spec/: ANCHORING.md  BOND_METRIC.md  CAPACITY_CONJECTURE.md  DISTRIBUTION.md  GENERATOR_SEARCH.md  NORMAL_FORMS.md  PREREG_RC1.md
tests/: test_ec_generators.py  test_generator_search.py  test_geometry.py  test_manifest.py
(+13 files in other folders)
